fixed one last layout issue

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -270,13 +270,8 @@
   border-radius: 20px;
 }
 .cards-container-about {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: row;
   width: 1200px;
   margin-top: 16px;
-  flex-flow: wrap column;
 }
 @media (max-width: 1199px) {
   .cards-container-about {
@@ -289,13 +284,22 @@
   justify-content: flex-start;
   align-items: center;
   flex-direction: row;
-  flex-direction: column;
   background-color: #fff;
   min-width: 435px;
   min-height: 400px;
   border-radius: 20px;
   margin-bottom: 16px;
   padding: 24px;
+}
+.cards-container-about .card .text {
+  display: flex;
+  justify-content: none;
+  align-items: none;
+  flex-direction: row;
+  flex-direction: column;
+}
+.cards-container-about .card .five {
+  width: 100%;
 }
 @media (max-width: 800px) {
   .cards-container-about .card {
